tests/errors/import_cycle.lq
# A cyclic import must raise a clean, bounded error instead of crashing.
import "../fixtures/cycle_a.lq"
